Knowing meta name tag

--- a/FavoritesHomePage.html
+++ b/FavoritesHomePage.html
@@ -2,6 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="keywords" content="HTML,HTML5,CSS,JavaScript, Favorites">
+    <meta name="RaonMaru">
+    <meta name="description" content="Making homePage like sitemap directory">
+    <!-- 주석-->
     <title>Hello World</title>
     <link rel="stylesheet" href="style.css">
     <script src="main.js" charset="utf-8"></script>
