refresh comment add

--- a/FavoritesHomePage.html
+++ b/FavoritesHomePage.html
@@ -6,6 +6,9 @@
     <meta name="RaonMaru">
     <meta name="description" content="Making homePage like sitemap directory">
     <!-- 주석-->
+    <!-- 30초마다 새로고침을 해줌.
+    <meta http-equiv="refresh" content="30">
+    -->
     <title>Hello World</title>
     <link rel="stylesheet" href="style.css">
     <script src="main.js" charset="utf-8"></script>
