--- a/FavoritesHomePage.html
+++ b/FavoritesHomePage.html
@@ -17,6 +17,19 @@
     <header>
       <h1>즐겨찾기</h1>
     </header>
+    <article class="Favorites">
+      <div class="">
+        <a href="#top"></a>
+      </div><div class="">
+        <a href="#top"></a>
+      </div>
+      <div class="">
+        <a href="#top"></a>
+      </div>
+      <div class="">
+        <a href="#top"></a>
+      </div>
+    </article>
     <p>어떻게 하면 이 부분을 내가 원하는 모습으로 바꿀 수 있을까요?(바둑판)</p>
     <footer>
     </footer>
