grid display, Sticky Footer Applied
referenced
https://m.blog.naver.com/PostView.nhn?blogId=eggtory&logNo=220744380205&proxyReferer=https%3A%2F%2Fwww.google.com%2F

--- a/FavoritesHomePage.html
+++ b/FavoritesHomePage.html
@@ -14,23 +14,38 @@
     <script src="main.js" charset="utf-8"></script>
   </head>
   <body>
-    <header>
-      <h1>즐겨찾기</h1>
-    </header>
-    <article class="Favorites">
-      <div class="">
-        <a href="#top"></a>
-      </div><div class="">
-        <a href="#top"></a>
-      </div>
-      <div class="">
-        <a href="#top"></a>
-      </div>
-      <div class="">
-        <a href="#top"></a>
-      </div>
-    </article>
-    <p>어떻게 하면 이 부분을 내가 원하는 모습으로 바꿀 수 있을까요?(바둑판)</p>
+    <div class="Wrapper">
+      <header onclick="alert("test")">
+        <h1>즐겨찾기</h1>
+      </header>
+      <article class="Favorites">
+        <div class="Favorite">
+          <a href="#top"></a>
+        </div>
+        <div class="Favorite">
+          <a href="#top"></a>
+        </div>
+        <div class="Favorite">
+          <a href="#top"></a>
+        </div>
+        <div class="Favorite">
+          <a href="#top"></a>
+        </div>
+        <div class="Favorite">
+          <a href="#top"></a>
+        </div>
+        <div class="Favorite">
+          <a href="#top"></a>
+        </div>
+        <div class="Favorite">
+          <a href="#top"></a>
+        </div>
+        <div class="Favorite">
+          <a href="#top"></a>
+        </div>
+      </article>
+      <div id="push"></div>
+    </div>
     <footer>
     </footer>
   </body>
