StinkyFooter_Reference Add, hyperlink highlight erased

--- a/FavoritesHomePage.html
+++ b/FavoritesHomePage.html
@@ -19,9 +19,11 @@
         <h1>즐겨찾기</h1>
       </header>
       <article class="Favorites">
-        <div class="Favorite">
-          <a href="#top"></a>
-        </div>
+        <a href="https://www.w3schools.com/tags/ev_onclick.asp">
+          <div id="OnClick" class="Favorite">
+            OnClick link
+          </div>
+        </a>
         <div class="Favorite">
           <a href="#top"></a>
         </div>
