solved overlap with calc & overflow with add div

--- a/FavoritesHomePage.html
+++ b/FavoritesHomePage.html
@@ -16,34 +16,101 @@
   <body>
     <div class="Wrapper">
       <header onclick="alert("test")">
-        <h1>즐겨찾기</h1>
+        <h1></h1>
       </header>
+
       <article class="Favorites">
-        <a href="https://www.w3schools.com/tags/ev_onclick.asp">
-          <div id="OnClick" class="Favorite">
-            OnClick link
+        <div class="FavoritesWrapper">
+          <a href="https://www.w3schools.com/tags/ev_onclick.asp">
+            <div id="OnClick" class="Favorite">
+              <img src="images/오케이.png" alt="">
+              OnClick link
+            </div>
+          </a>
+          <div class="Favorite">
           </div>
-        </a>
-        <div class="Favorite">
-          <a href="#top"></a>
-        </div>
-        <div class="Favorite">
-          <a href="#top"></a>
-        </div>
-        <div class="Favorite">
-          <a href="#top"></a>
-        </div>
-        <div class="Favorite">
-          <a href="#top"></a>
-        </div>
-        <div class="Favorite">
-          <a href="#top"></a>
-        </div>
-        <div class="Favorite">
-          <a href="#top"></a>
-        </div>
-        <div class="Favorite">
-          <a href="#top"></a>
+          <div class="Favorite">
+          </div>
+          <div class="Favorite">
+          </div>
+          <div class="Favorite">
+          </div>
+          <div class="Favorite">
+          </div>
+          <div class="Favorite">
+          </div>
+          <div class="Favorite">
+          </div>
+          <div class="Favorite">
+          </div>
+          <div class="Favorite">
+          </div>
+          <div class="Favorite">
+          </div>
+          <div class="Favorite">
+          </div>
+          <div class="Favorite">
+          </div>
+          <div class="Favorite">
+          </div>
+          <div class="Favorite">
+          </div>
+          <div class="Favorite">
+          </div>
+          <div class="Favorite">
+          </div>
+          <div class="Favorite">
+          </div>
+          <div class="Favorite">
+          </div>
+          <div class="Favorite">
+          </div>
+          <div class="Favorite">
+          </div>
+          <div class="Favorite">
+          </div>
+          <div class="Favorite">
+          </div>
+          <div class="Favorite">
+          </div>
+          <div class="Favorite">
+          </div>
+          <div class="Favorite">
+          </div>
+          <div class="Favorite">
+          </div>
+          <div class="Favorite">
+          </div>
+          <div class="Favorite">
+            <a href="#top"></a>
+          </div>
+          <div class="Favorite">
+            <a href="#top"></a>
+          </div>
+          <div class="Favorite">
+            <a href="#top"></a>
+          </div>
+          <div class="Favorite">
+            <a href="#top"></a>
+          </div>
+          <div class="Favorite">
+            <a href="#top"></a>
+          </div>
+          <div class="Favorite">
+            <a href="#top"></a>
+          </div>
+          <div class="Favorite">
+            <a href="#top"></a>
+          </div>
+          <div class="Favorite">
+            <a href="#top"></a>
+          </div>
+          <div class="Favorite">
+            <a href="#top"></a>
+          </div>
+          <div class="Favorite">
+            <a href="#top"></a>
+          </div>
         </div>
       </article>
       <div id="push"></div>
